[package]
name = "markless"
version = "0.9.24"
edition = "2024"
authors = ["Josh V"]
description = "A terminal markdown viewer with image support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jvanderberg/markless"
keywords = ["markdown", "tui", "terminal", "viewer", "pager"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Markdown parsing
comrak = { version = "0.31", default-features = false, features = ["shortcodes"] }

# CSV parsing (for rendering CSV code blocks as tables)
csv = "1"

# Image rendering
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"

# Mermaid diagram rendering
mermaid-rs-renderer = { version = "0.2", default-features = false }
resvg = "0.44"

# Math rendering (LaTeX → Unicode / SVG → raster)
unicodeit = "0.2"
mitex = "0.2"
typst = "0.14"
typst-svg = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
base64 = "0.22"

# Terminal background query (OSC 11)

# File watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unicode handling
unicode-width = "0.2"
ropey = "1.6.1"

[dev-dependencies]
# Testing
proptest = "1"
tempfile = "3"
mitex-spec = "0.2"
mitex-spec-gen = "0.2"

# Benchmarking
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "rendering"
harness = false

[features]
default = ["sixel", "kitty"]
sixel = []
kitty = []

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
# These are noisy for TUI apps
too_many_lines = "allow"
struct_excessive_bools = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
